# Distribution-Shift-Lane-Perception

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  autoencoder.py  calibrate_threshold.py  create_list_files.py  data_builder.py  data_util_test.py  data_utils.py  environment.yml  experiment.py  feature_extractor.py  gradcam_unet.py  mmd_test.py  model_experimentP2.py  pyproject.toml  run_all_permutations.sh  run_experiment.py  setup.py  shift_concat_experiment.py  shift_detector_torch.py  shift_experiment.py  tableGen.py  trainPhase2.py  visGen2.py  visualizeGeneralized.py  visualizeResults2.py  visualizeResultsv3.py  visualizeResultsv4.py  visualizeResultsv5.py  visualize_results.py
DistributionShiftPerception/: db.sqlite3  manage.py
Distribution_Shift_Perception/: LICENSE  pyproject.toml
LocalBash/: CCE10.sh  CCE11.sh  CCE13.sh  CCE14.sh  CCE15.sh  CCE16.sh  CCE2.sh  CCE4.sh  CCE6.sh  CCE8.sh  CCE9.sh  D1.sh  D2.sh  D3.sh  D4.sh  D5.sh  D6.sh  H19.sh  H20.sh  H21.sh  J1.sh  J2.sh  J3.sh  K1.sh  K2.sh  K3.sh  bashGen.bat  bashGen.sh  bashgen.py  concat.sh  graph.sh  progress.py  repair.py  run_missing.sh  table.sh  test.txt
data/: data_builder.py  data_logging.py  data_util_test.py  data_utils.py
distribution_shift_perception/: __init__.py  _vendor.py  run_experiment.py  shift_experiment.py
distribution_shift_perception.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: index.html  requirements.txt
examples/: quick_sanity_check.py
features/: Curvelanes_train_1000_0.npy  calibration_null_mmd.npy  mmd_CULane_CULane_100runs.npy  mmd_CULane_Curvelanes_100runs.npy  mmd_curvelanes_100runs.npy  tau_CULane_CULane.npy  tau_CULane_Curvelanes.npy  tpr_CULane_CULane_100runs.npy
figure_generation_tools/: figureGenerator.py  modelExperimentTableGenerator.py  tableGenerator.py
figures/: results.csv
logs/: a32ttw.json  d128gdd_K100.json  d128ids_K100.json  d128rel_K10.json  d128rel_K100.json  d32_K10.json  d32_K100.json  d32gdd_K10.json  d32rel_K10.json  d32rel_K100.json  d64gdd_K10.json  d64gdd_K100.json  d64idsK100.json  d64ids_K10.json  mixed_shift_experiment_results_13.json  mixed_shift_experiment_results_14.json  mixed_shift_experiment_results_2.json  mixed_shift_experiment_results_9.json  mixed_shift_experiment_results_additive_target.json  mixed_shift_experiment_results_baby2.json  mixed_shift_experiment_results_baby3.json  rel64TEN.json  (+1 more)
(+1771 files in other folders)
