[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "distribution_shift_perception"
requires-python = ">= 3.10"
readme = "README.md"
description = "An experiment to detect distribution shift in datasets using a convolutional autoencoder and the Maximum Mean Discrepancy (MMD) two-sample test."
license = "MIT"
keywords = [
    "distribution-shift",
    "domain-shift",
    "computer-vision",
    "mmd",
    "maximum-mean-discrepancy",
    "two-sample-test",
    "autoencoder",
    "feature-extraction",
    "pytorch",
    "research"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
authors = [
  {name = "Mohammed Abdul Hafeez Khan", email = "mkhan@my.fit.edu"},
  {name = "Alexander Doyle", email = "adoyle2025@my.fit.edu"}
]
maintainers = [
  {name = "Mohammed Abdul Hafeez Khan", email = "mkhan@my.fit.edu"},
  {name = "Alexander Doyle", email = "adoyle2025@my.fit.edu"}
]